# DB-Railway-Service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  migrate.py  pyproject.toml
app/: config.py  db.py  dependencies.py  exceptions.py  main.py
app/controllers/: forms_controller.py  home.py  reports_controller.py
app/domain/: class_facility.py  coach.py  facility.py  operator.py  passenger.py  pricing.py  reports.py  route.py  route_station.py  station.py  ticket.py  train.py  travel_class.py
app/dto/: responses.py  ticket_dto.py  train_dto.py
app/repositories/: base.py  class_facility_repository.py  coach_repository.py  facility_repository.py  operator_repository.py  passenger_repository.py  pricing_repository.py  route_repository.py  route_station_repository.py  station_repository.py  ticket_repository.py  train_repository.py  travel_class_repository.py
app/services/: boarding_pass_service.py  commands.py  lookup_service.py  manifest_service.py  pricing_service.py  ticket_service.py  train_service.py
app/static/: styles.css
app/templates/: base.html  index.html
migrations/: 001_initial_schema.sql  002_hw3_refinements.sql  099_seed_data.sql
seeds/: class_facility.csv  coach.csv  dining_coach.csv  facility.csv  first_class.csv  luggage_van.csv  operator_class_route_pricing.csv  passenger.csv  railway_operator.csv  route.csv  route_station.csv  seating_coach.csv  second_class.csv  sleeping_class.csv  sleeping_coach.csv  station.csv  ticket.csv  train.csv  travel_class.csv
sql/: ddl.sql
tests/: conftest.py
(+38 files in other folders)
